--- a/Google Project/intro_multimodal_rag-v1.0.0.ipynb
+++ b/Google Project/intro_multimodal_rag-v1.0.0.ipynb
@@ -329,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your project ID is: qwiklabs-gcp-02-ac1e1fa58804\n"
+      "Your project ID is: ***************************************
      ]
     }
    ],
